test/bad/functions/void03.px

func f(x: [{Bool*Void}?]) def
    return
